# matrix

./: .gitignore  LICENSE  README.md
hooks/: pre-commit
libs/: CMakeCache.txt  Makefile  cmake_install.cmake  matrix
libs/boost_1_72_0/boost/: array.hpp  bimap.hpp  cast.hpp  cerrno.hpp  circular_buffer.hpp  circular_buffer_fwd.hpp  cregex.hpp  dll.hpp  dynamic_bitset_fwd.hpp  filesystem.hpp  function.hpp  hana.hpp  integer.hpp  lexical_cast.hpp  memory_order.hpp  metaparse.hpp  multi_index_container.hpp  next_prior.hpp  non_type.hpp  polymorphic_cast.hpp  progress.hpp  python.hpp  regex.hpp  scope_exit.hpp  shared_array.hpp  shared_container_iterator.hpp  static_assert.hpp  token_iterator.hpp  type.hpp  utility.hpp
libs/boost_1_72_0/boost/archive/: archive_exception.hpp  basic_archive.hpp  basic_binary_iarchive.hpp  basic_binary_iprimitive.hpp  basic_binary_oarchive.hpp  basic_binary_oprimitive.hpp  basic_streambuf_locale_saver.hpp  basic_text_iarchive.hpp  basic_text_iprimitive.hpp  basic_text_oarchive.hpp  basic_text_oprimitive.hpp  basic_xml_archive.hpp  basic_xml_iarchive.hpp  basic_xml_oarchive.hpp  binary_iarchive.hpp  binary_iarchive_impl.hpp  binary_oarchive.hpp  binary_oarchive_impl.hpp  binary_wiarchive.hpp  binary_woarchive.hpp  codecvt_null.hpp  dinkumware.hpp  polymorphic_binary_iarchive.hpp  polymorphic_binary_oarchive.hpp  polymorphic_iarchive.hpp  polymorphic_oarchive.hpp  polymorphic_text_iarchive.hpp  (+18 more)
scripts/: format-code.sh
src/: CMakeLists.txt  MatrixConfig.h.in  main.cpp  matrix.cpp  matrix.hpp
src/core/: Matrix.hpp  MatrixFileReader.hpp
(+3551 files in other folders)
